--- a/.gitignore
+++ b/.gitignore
@@ -37,12 +37,10 @@ private_keys/
 .DS_Store
 Thumbs.db
 
-TESTING_GUIDE.md
-NETWORK_SETUP.md
-CIFRADO_HIBRIDO.md
-INSTALL.md
+*.md
 verify_db.py
 demo_crypto.py
 view_audit.py
 setup.ps1
 setup.sh
+*.sql
